nfs-yaml/gitlab-Ingress/7-gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
spec:
  ingressClassName: nginx
  rules:
    - host: "gitlab.sjhz.tk"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
